--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-aws-sns": "^0.4.0",
     "express-openapi-validator": "^3.12.7",
     "uuid": "^7.0.3"
   },
