--- a/.gitlab/auto-deploy-values.yaml
+++ b/.gitlab/auto-deploy-values.yaml
@@ -18,3 +18,11 @@ readinessProbe:
 
 livenessProbe:
   path: "/v1/health"
+
+ingress:
+  tls:
+    secretName: "tls-secret"
+    enabled: true
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    kubernetes.io/ingress.class: "nginx"
