--- a/.gitlab/auto-deploy-values.yaml
+++ b/.gitlab/auto-deploy-values.yaml
@@ -26,3 +26,4 @@ ingress:
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/tls-acme: false
