--- a/.gitlab/auto-deploy-values.yaml
+++ b/.gitlab/auto-deploy-values.yaml
@@ -6,7 +6,6 @@ application:
 service:
   externalPort: 3000
   internalPort: 3000
-  commonName:
 
 prometheus:
   metrics: true
@@ -27,3 +26,4 @@ ingress:
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/tls-acme:
