--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^3.12.7",
-    "express-sns-validator": "^1.0.0",
+    "sns-validator": "^0.3.4",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
