--- a/src/specs/api.yaml
+++ b/src/specs/api.yaml
@@ -1,4 +1,4 @@
-openapi: '3.0.0'
+openapi: 3.0.0
 info:
   title: Single-cell API
   version: 1.0.0
@@ -17,7 +17,7 @@ paths:
         - heartbeat
       summary: Returns health of API
       operationId: checkHealth
-      x-eov-operation-id: health#check
+      x-eov-operation-id: 'health#check'
       x-eov-operation-handler: routes/health
       responses:
         '200':
@@ -40,7 +40,7 @@ paths:
   /work:
     post:
       operationId: submitWork
-      x-eov-operation-id: work#submit
+      x-eov-operation-id: 'work#submit'
       x-eov-operation-handler: routes/work
       requestBody:
         description: work to submit
@@ -57,11 +57,13 @@ paths:
           description: successful operation
           content:
             application/json:
-              schema: {} 
+              schema: {}
+              examples:
+                example-1: {}
   /work-results:
     post:
       operationId: receiveWork
-      x-eov-operation-id: work#receive
+      x-eov-operation-id: 'work#receive'
       x-eov-operation-handler: routes/work
       requestBody:
         description: work results submitted
@@ -74,9 +76,9 @@ paths:
         '200':
           description: the results have been successfully received
           content:
-            application/json:
+            text/plain:
               schema:
-                type: object
+                type: string
   '/experiments/{experimentId}':
     get:
       tags:
@@ -84,7 +86,7 @@ paths:
       summary: Find experiment by ID
       description: Returns the main details of the experiment.
       operationId: getExperimentById
-      x-eov-operation-id: experiment#findByID
+      x-eov-operation-id: 'experiment#findByID'
       x-eov-operation-handler: routes/experiment
       parameters:
         - name: experimentId
@@ -100,6 +102,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Experiment'
+              examples:
+                example-1: {}
+            application/xml:
+              schema:
+                type: object
+                properties:
+                  '':
+                    type: string
         '400':
           description: Invalid ID supplied
         '404':
@@ -110,7 +120,7 @@ paths:
         - experiments
       summary: Generates mock data into the DynamoDB database.
       operationId: generateExperimentMockData
-      x-eov-operation-id: experiment#generateMock
+      x-eov-operation-id: 'experiment#generateMock'
       x-eov-operation-handler: routes/experiment
       responses:
         '200':
@@ -118,7 +128,6 @@ paths:
           content:
             application/json:
               schema: {}
-
   '/experiments/{experimentId}/cell-sets':
     get:
       tags:
@@ -126,7 +135,7 @@ paths:
       summary: Get a hierarchical view of cell sets in the experiment.
       description: Returns a hirearchical view of cell sets in the experiment.
       operationId: getExperimentCellSetsById
-      x-eov-operation-id: experiment#getCellSets
+      x-eov-operation-id: 'experiment#getCellSets'
       x-eov-operation-handler: routes/experiment
       parameters:
         - name: experimentId
