--- a/src/specs/api.yaml
+++ b/src/specs/api.yaml
@@ -1,10 +1,14 @@
 openapi: 3.0.0
 info:
-  title: Single-cell API
+  title: API
   version: 1.0.0
   description: The main Node.js pipeline API.
   license:
     name: MIT
+  contact:
+    name: Marcell Pek
+    email: marcell@biomage.net
+  termsOfService: 'https://opensource.org/licenses/MIT'
 servers:
   - url: /v1
 tags:
@@ -15,7 +19,7 @@ paths:
     get:
       tags:
         - heartbeat
-      summary: Returns health of API
+      summary: API health check
       operationId: checkHealth
       x-eov-operation-id: 'health#check'
       x-eov-operation-handler: routes/health
@@ -37,6 +41,7 @@ paths:
                       - test
                       - staging
                       - production
+      description: Returns a status on the health of the API.
   /work:
     post:
       operationId: submitWork
@@ -58,32 +63,45 @@ paths:
           content:
             application/json:
               schema: {}
-              examples:
-                example-1: {}
-  /work-results:
+              examples: {}
+  /workResults:
     post:
       operationId: receiveWork
       x-eov-operation-id: 'work#receive'
       x-eov-operation-handler: routes/work
       requestBody:
-        description: work results submitted
+        description: The data sent by AWS SNS.
         required: true
         content:
           text/plain:
             schema:
               type: string
+            examples: {}
+          application/json:
+            schema:
+              type: object
+              properties: {}
+            examples: {}
       responses:
         '200':
-          description: the results have been successfully received
+          description: 'A response was received by the server, *irrespective of whether it was successful or not*.'
           content:
             text/plain:
               schema:
                 type: string
+      description: |-
+        Results from work performed by workers are relayed to the API through this endpoint.
+
+        Note that this endpoint is only exposed to AWS SNS, and since it has a specific communication protocol with limited feedback, the schema defined here is designed to be liberally enforceable. This endpoint is also used by SNS to handle subscribe/unsubscribe events.
+
+        The actual JSON for the experiments is found in the `WorkResponse` model, which is to be validated by the API.
+      summary: Retrieve results from worker
+    parameters: []
   '/experiments/{experimentId}':
     get:
       tags:
         - experiments
-      summary: Find experiment by ID
+      summary: Look up experiment by ID
       description: Returns the main details of the experiment.
       operationId: getExperimentById
       x-eov-operation-id: 'experiment#findByID'
@@ -110,6 +128,18 @@ paths:
                 properties:
                   '':
                     type: string
+            multipart/form-data:
+              schema:
+                type: object
+                properties: {}
+            text/html:
+              schema:
+                type: object
+                properties: {}
+            text/plain:
+              schema:
+                type: object
+                properties: {}
         '400':
           description: Invalid ID supplied
         '404':
@@ -118,7 +148,7 @@ paths:
     post:
       tags:
         - experiments
-      summary: Generates mock data into the DynamoDB database.
+      summary: Generate mock data
       operationId: generateExperimentMockData
       x-eov-operation-id: 'experiment#generateMock'
       x-eov-operation-handler: routes/experiment
@@ -128,11 +158,12 @@ paths:
           content:
             application/json:
               schema: {}
+      description: Generates mock data into the pipeline DynamoDB database.
   '/experiments/{experimentId}/cell-sets':
     get:
       tags:
         - experiments
-      summary: Get a hierarchical view of cell sets in the experiment.
+      summary: Retrieve cell sets
       description: Returns a hirearchical view of cell sets in the experiment.
       operationId: getExperimentCellSetsById
       x-eov-operation-id: 'experiment#getCellSets'
@@ -157,15 +188,11 @@ paths:
                     items:
                       $ref: '#/components/schemas/CellSets'
         '400':
-          description: Invalid ID supplied
+          description: Invalid ID supplied.
         '404':
           description: Experiment not found
 components:
-  securitySchemes:
-    api_key:
-      type: apiKey
-      name: api_key
-      in: header
+  securitySchemes: {}
   schemas:
     Experiment:
       type: object
@@ -193,9 +220,6 @@ components:
           type: string
     CellSets:
       type: object
-      required:
-        - key
-        - name
       properties:
         key:
           type: integer
@@ -208,3 +232,59 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/CellSets'
+      required:
+        - key
+        - name
+    WorkResponse:
+      title: WorkResponse
+      type: object
+      description: This is the format the workers communicate the results of the work they completed back to the API. The API is then responsible for transforming this data and returning it back to the clients.
+      properties:
+        uuid:
+          type: string
+          format: uuid
+          description: The UUID of the work submitted by the UI.
+        timeout:
+          type: string
+          format: date-time
+          description: The timeout value for this work specified by the UI.
+        results:
+          type: object
+          description: The results of the work
+          required:
+            - content-type
+            - type
+            - body
+          properties:
+            content-type:
+              type: string
+              example: application/json
+              description: The MIME type of the work completed.
+            type:
+              type: string
+              description: The type of content found in the `body`.
+              enum:
+                - inline
+                - s3-path
+            body:
+              type: string
+              description: The work result in the format specified by `content-type` and `type`.
+        socketId:
+          type: string
+          description: The ID of the socket where the response is expected by the UI.
+      required:
+        - uuid
+        - timeout
+        - results
+        - socketId
+    ApiError:
+      title: ApiError
+      type: object
+      properties:
+        message:
+          type: string
+        errors:
+          type: object
+      required:
+        - message
+        - errors
