--- a/src/specs/api.yaml
+++ b/src/specs/api.yaml
@@ -67,7 +67,7 @@ paths:
   /workResults:
     post:
       operationId: receiveWork
-      x-eov-operation-id: 'work#response'
+      x-eov-operation-id: 'work#receive'
       x-eov-operation-handler: routes/work
       requestBody:
         description: The data sent by AWS SNS.
@@ -248,43 +248,46 @@ components:
       type: object
       description: This is the format the workers communicate the results of the work they completed back to the API. The API is then responsible for transforming this data and returning it back to the clients.
       properties:
-        uuid:
+        socketId:
           type: string
-          format: uuid
-          description: The UUID of the work submitted by the UI.
+          description: The ID of the socket where the response is expected by the UI.
+        results:
+          type: array
+          description: The results of the work
+          items:
+            type: object
+            description: The results of the work
+            properties:
+              content-type:
+                type: string
+                example: application/json
+                description: The MIME type of the work completed.
+              type:
+                type: string
+                description: The type of content found in the `body`.
+                enum:
+                  - inline
+                  - s3-path
+              body:
+                type: string
+                description: The work result in the format specified by `content-type` and `type`.
+            required:
+              - content-type
+              - type
+              - body
         timeout:
           type: string
           format: date-time
           description: The timeout value for this work specified by the UI.
-        results:
-          type: object
-          description: The results of the work
-          required:
-            - content-type
-            - type
-            - body
-          properties:
-            content-type:
-              type: string
-              example: application/json
-              description: The MIME type of the work completed.
-            type:
-              type: string
-              description: The type of content found in the `body`.
-              enum:
-                - inline
-                - s3-path
-            body:
-              type: string
-              description: The work result in the format specified by `content-type` and `type`.
-        socketId:
+        uuid:
           type: string
-          description: The ID of the socket where the response is expected by the UI.
+          format: uuid
+          description: The UUID of the work submitted by the UI.
       required:
-        - uuid
-        - timeout
-        - results
         - socketId
+        - results
+        - timeout
+        - uuid
     ApiError:
       title: ApiError
       type: object
