--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-openapi-validator": "^3.12.7",
     "js-yaml": "^3.13.1",
     "sns-validator": "^0.3.4",
+    "socket.io": "^2.3.0",
     "swagger-model-validator": "^3.0.18",
     "uuid": "^7.0.3"
   },
