--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -43,7 +43,7 @@ spec:
         release: {{ .Release.Name }}
     spec:
       # TODO: this needs to be refactored -- currently this service account needs to be created dynamically
-      # serviceAccountName: api-service-account
+      serviceAccountName: api-service-account
       imagePullSecrets:
 {{ toYaml .Values.image.secrets | indent 10 }}
       containers:
