basic test for work submit, created test config and added missing stuff to schema

--- a/src/specs/api.yaml
+++ b/src/specs/api.yaml
@@ -45,6 +45,13 @@ paths:
                       - test
                       - staging
                       - production
+                  clusterEnv: 
+                    type: string
+                    enum:
+                      - development
+                      - test
+                      - staging
+                      - production
       description: Returns a status on the health of the API.
   /workResults:
     post:
