--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,13 +21,21 @@ variables:
   ROLLOUT_RESOURCE_TYPE: deployment
   STAGING_ENABLED: "true"
   POSTGRES_ENABLED: "false"
-  
-testing:
-  image: node:latest
+
+test:
   stage: test
+  image: node:latest
+  needs: []
   script:
-  - yarn install
-  - yarn test
+    - yarn install
+    - yarn test
+  variables:
+    AWS_DEFAULT_REGION: 'eu-west-2'
+  rules:
+    - if: '$TEST_DISABLED'
+      when: never
+    - if: '$CI_COMMIT_TAG || $CI_COMMIT_BRANCH'
+
 
 include:
   - template: Jobs/Build.gitlab-ci.yml
