--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js API for the single-cell pipeline.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest --coverage --detectOpenHandles",
     "dev": "nodemon src/app.js",
     "start": "node src/app.js"
   },
