--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js API for the single-cell pipeline.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage --detectOpenHandles",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "dev": "nodemon src/app.js",
     "start": "node src/app.js"
   },
@@ -28,9 +29,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^3.12.7",
+    "ioredis": "^4.17.3",
+    "ioredis-mock": "^4.21.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "log-timestamp": "^0.3.0",
+    "lru-cache": "^5.1.1",
+    "object-hash": "^2.0.3",
     "sns-validator": "^0.3.4",
     "socket.io": "^2.3.0",
     "swagger-model-validator": "^3.0.18",
