New schema for Gene Expression (New) task

--- a/src/specs/api.yaml
+++ b/src/specs/api.yaml
@@ -311,6 +311,7 @@ components:
             - $ref: '#/components/schemas/WorkSchemaListGenes'
             - $ref: '#/components/schemas/WorkSchemaDifferentialExpression'
             - $ref: '#/components/schemas/WorkSchemaGeneExpression'
+            - $ref: '#/components/schemas/WorkSchemaGeneExpressionNew'
         experimentId:
           type: string
           description: The ID of the experiment for which this work was created.
@@ -451,18 +452,38 @@ components:
                 type: array
                 description: 'The array of expression values, raw or scaled, depending on the setting.'
                 items:
-                  type: number 
+                  type: number
             required:
               - geneName
               - expression
         minExpression:
           type: number
-          description: "The minimum expression value of that gene" 
+          description: The minimum expression value of that gene
         maxExpression:
           type: number
-          description: "The maximum expression value of that gene"
+          description: The maximum expression value of that gene
       required:
         - cells
         - data
         - minExpression
         - maxExpression
+    WorkSchemaGeneExpressionNew:
+      title: WorkSchemaGeneExpressionNew
+      type: object
+      properties:
+        name:
+          type: string
+          description: The name of this task. Must be `GeneExpressionNew`.
+          pattern: GeneExpressionNew
+        genes:
+          type: array
+          description: A list of genes to compute expression data for.
+          items:
+            type: string
+        scale:
+          type: boolean
+          description: Whether to perform feature scaling (normalization to unit variance and zero mean). Defaults to `false` if not specified.
+          default: 'false'
+      required:
+        - name
+        - genes
