--- a/src/specs/api.yaml
+++ b/src/specs/api.yaml
@@ -305,20 +305,52 @@ components:
           type: string
           format: date-time
           description: 'The timeout parameter set by the client. While processing work, all work items whose timeout field is past the current time will be discarded along the work processing chain.'
-        body:
-          oneOf:
-            - $ref: '#/components/schemas/WorkSchemaGetEmbedding'
-            - $ref: '#/components/schemas/WorkSchemaListGenes'
-            - $ref: '#/components/schemas/WorkSchemaDifferentialExpression'
-            - $ref: '#/components/schemas/WorkSchemaGeneExpression'
         experimentId:
           type: string
           description: The ID of the experiment for which this work was created.
+        body:
+          $ref: '#/components/schemas/WorkRequestBodies'
+        pagination:
+          type: object
+          description: |-
+            Lazy-load results instead of return all results at once.
+
+            If this object exists in the `WorkRequest`, the response returned will contain the response number given in `responseKey` to be ordered according to the pagination parameters.
+
+            For `pagination` to work, the response given in `responseKey` must be tabular data loaded as a list of objects, where each object corresponds to a row in a table.
+          properties:
+            orderBy:
+              type: string
+              description: The column to order by.
+            orderDirection:
+              type: string
+              enum:
+                - ASC
+                - DESC
+              description: The direction of the ordering.
+            offset:
+              type: integer
+              minimum: 0
+              description: The starting position to start loading from.
+            limit:
+              type: integer
+              minimum: 0
+              description: The number of items to return.
+            responseKey:
+              type: integer
+              minimum: 0
+              description: The response to apply pagination to.
+          required:
+            - orderBy
+            - orderDirection
+            - offset
+            - limit
       required:
         - uuid
         - socketId
         - timeout
         - experimentId
+        - body
     WorkSchemaGetEmbedding:
       title: WorkSchemaGetEmbedding
       type: object
@@ -457,3 +489,11 @@ components:
       required:
         - name
         - genes
+    WorkRequestBodies:
+      oneOf:
+        - $ref: '#/components/schemas/WorkSchemaGetEmbedding'
+        - $ref: '#/components/schemas/WorkSchemaListGenes'
+        - $ref: '#/components/schemas/WorkSchemaDifferentialExpression'
+        - $ref: '#/components/schemas/WorkSchemaGeneExpression'
+      title: WorkRequestBodies
+      description: Valid work request bodies.
