--- a/src/specs/api.yaml
+++ b/src/specs/api.yaml
@@ -642,6 +642,7 @@ components:
         name:
           type: string
           description: Name of the work. Must be `ClusterCells`.
+          pattern: ClusterCells
         cellSetName:
           type: string
           description: The name under which the cell set group should be saved.
@@ -653,7 +654,11 @@ components:
           enum:
             - louvain
             - leiden
+        cellSetKey:
+          type: string
+          description: The key under which the cell set should be saved.
       required:
         - name
         - cellSetName
         - type
+        - cellSetKey
